snipeit/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snipeit-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: snipeit
  replicas: 1
  template:
    metadata:
      labels:
        app: snipeit
    spec:
      containers:
      - name: snipeit
        image: lscr.io/linuxserver/snipe-it:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /data
          name: snipeit-data
      volumes:
      - name: snipeit-data
        nfs:
          server: 10.10.9.14
          path: "/mnt/Storage/apps/snipeit"
