snipeit/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: snipeit-service
  namespace: default
spec:
  selector:
    app: snipeit
  ports:
    - name: snipeit-http
      port: 80
      protocol: TCP
    - name: snipeit-https
      port: 443
      protocol: TCP
