snipeit/svc-tcp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: snipeit-service
spec:
  selector:
    app: snipeit
  ports:
    - name: snipeit-web
      port: 80
      protocol: TCP
