snipeit/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snipeit-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: inventory.sancaktar.net
    https:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snipeit-service    
            port:
              number: 443
